# aquila-workshop

./: CMakeLists.txt
aquila/: functions.h
aquila/source/: WaveFile.cpp  WaveFile.h
aquila/transform/: OouraFft.cpp
examples/: CMakeLists.txt
examples/workshop/: CMakeLists.txt  generate_test_wavfile.cpp  workshop.cpp
lib/unittestpp/: CMakeLists.txt
tests/: CMakeLists.txt  functions.cpp
tests/source/: WaveFile.cpp
tests/transform/: OouraFft.cpp
